--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.liquibase.password=450077
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=validate
 
-#jwt.token.secret=jwtappdemo
-#jwt.token.expired=3600000
+jwt.token.secret=n35SzA4H
+jwt.token.expired=3600000
