development is still in progress

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.jpa.hibernate.ddl-auto=validate
 jwt.token.secret=n35SzA4H
 jwt.token.expired=15778463000
 
+spring.jackson.serialization.write-dates-as-timestamps=true
 
 
 
